new ide new versions conflicts 11.07.2023

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,13 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+   // id "com.google.devtools.ksp"
 }
-
+/*plugins {
+    alias(libs.plugins.androidApplication)
+    alias(libs.plugins.kotlinAndroid)
+    id("com.google.devtools.ksp")
+}*/
 android {
     compileSdk 33
 
@@ -26,8 +31,9 @@ android {
         }
     }
     packagingOptions {
-        exclude("META-INF/LICENSE.md")
-
+        resources {
+            excludes += ['META-INF/LICENSE.md']
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
@@ -35,9 +41,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '11'
-
-
-
     }
     dataBinding{
         enabled = true
@@ -53,19 +56,21 @@ dependencies {
     implementation project(path: ':playlistFeature')
     implementation project(path: ':coreUI')
     implementation project(path: ':playerFeature')
-
+    implementation project(path: ':trackdialogFeature')
     //core
-    implementation 'androidx.core:core-ktx:1.9.0'
+   // implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'com.google.android.material:material:1.8.0'
+    implementation project(path: ':trackdialogFeature')
+
     // implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
     //Test
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.test.ext.junit
+    androidTestImplementation libs.espresso.core
 
     //DO NOT TOUCH - GOOGLE BUG HERE!!!
     debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0-alpha04")
