--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,7 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 plugins {
-
-    /**
-     * Use `apply false` in the top-level build.gradle file to add a Gradle
-     * plugin as a build dependency but not apply it to the current (root)
-     * project. Don't use `apply false` in sub-projects. For more information,
-     * see Applying external plugins with same version to subprojects.
-     */
-    id("com.android.application") version '7.4.2' apply false
-    id("com.android.library") version '7.4.2' apply false
-    id("org.jetbrains.kotlin.android") version "1.8.10" apply false
-    id "org.jetbrains.kotlin.kapt" version "1.8.20-Beta" apply false
+    alias(libs.plugins.androidApplication) apply false
+    alias(libs.plugins.kotlinAndroid) apply false
+   // id("com.google.devtools.ksp") version "1.8.10-1.0.9" apply false
 }
