--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+   /* ext.kotlin_version = '1.6.21'
 
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }*/
+}
 plugins {
     alias(libs.plugins.androidApplication) apply false
     alias(libs.plugins.kotlinAndroid) apply false
-   // id("com.google.devtools.ksp") version "1.8.10-1.0.9" apply false
+    alias(libs.plugins.devtoolsKsp) apply false
+    //id("com.google.devtools.ksp") version "1.8.21-1.0.11" apply false
+}
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+        google()
+        mavenCentral()
+    }
 }
