--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -1,7 +1,12 @@
 plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    //id 'com.android.library'
+    id 'com.android.application'
+  //  alias(libs.plugins.androidLibrary)
+   // id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.kotlinAndroid)
+   // id 'kotlin-kapt'
+    alias(libs.plugins.devtoolsKsp)
+   // id 'kotlin-android'
 //id "com.google.devtools.ksp"
 }
 /*plugins {
@@ -26,9 +31,8 @@ android {
         minSdk 21
         targetSdk 33
         //multiDexEnabled true
-        testInstrumentationRunner "com.yes.trackdialogfeature.DexOpeningTestRunner"
+         testInstrumentationRunner "com.yes.trackdialogfeature.DexOpeningTestRunner"
         //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
     }
     /* packagingOptions {
          exclude("META-INF/LICENSE.md")
@@ -50,14 +54,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
+  /*  kotlin {
+        jvmToolchain(11)
+    }*/
     kotlinOptions {
-        jvmTarget = '17'
-        /* freeCompilerArgs += [
-                  "-Xjvm-default=all",
-          ]*/
+        jvmTarget = '11'
     }
     buildFeatures {
         viewBinding = true
@@ -74,8 +78,8 @@ dependencies {
     androidTestImplementation project(path: ':shared-test')
     //room
     def room_version = "2.5.2"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation libs.androidx.room.runtime
+    ksp "androidx.room:room-compiler:$room_version"
 
     // To use Kotlin annotation processing tool (kapt)
    /* kapt "androidx.room:room-compiler:$room_version"*//
@@ -97,22 +101,22 @@ dependencies {
 
     //Dagger/////////////////////
     def dagger_version = '2.45'
-    implementation 'com.google.dagger:dagger:2.45'
-    kapt 'com.google.dagger:dagger-compiler:2.45'
+    implementation libs.dagger
+    ksp libs.dagger.compiler
     //  kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
 
     //testJunit4
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'junit:junit:4.13.2'
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.test.ext.junit
+    androidTestImplementation libs.junit
     ///////////
     androidTestImplementation libs.androidx.room.testing
     //testJunit5
     /*testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
     androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'*/
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.9.3'
+    testImplementation libs.junit.jupiter
+    testRuntimeOnly libs.junit.jupiter
     //junit5 seems to not worked on android
    /* androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
     androidTestRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.9.3'*/
@@ -128,37 +132,40 @@ dependencies {
     ///////////////////////////
     // Mock objects
     //DO NOT TOUCH - last version conflicts with espresso!
-    def mockkVersion = "1.12.4"
+   // testImplementation libs.mockk
+    def mockkVersion = "1.12.2"
     testImplementation "io.mockk:mockk:$mockkVersion"
+    androidTestImplementation libs.mockk.android
     //shit here!!!!!
     //androidTestImplementation "io.mockk:mockk-android:$mockkVersion"
     // testImplementation "io.mockk:mockk-android:${mockkVersion}"
     // testImplementation "io.mockk:mockk-agent:${mockkVersion}"
     //noinspection GradleDependency
-    androidTestImplementation "io.mockk:mockk-android:${mockkVersion}"
     // androidTestImplementation "io.mockk:mockk-agent:${mockkVersion}"
     ////////////////////////
     //turbine
-    testImplementation 'app.cash.turbine:turbine:0.12.1'
+    testImplementation libs.turbine
     // Run Blocking Test
     def coreTestingVersion = "1.1.1"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation libs.kotlinx.coroutines.test
+    androidTestImplementation libs.kotlinx.coroutines.test
     //Espresso
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1')
-    androidTestImplementation ('androidx.test.espresso:espresso-contrib:3.5.1')
-    androidTestImplementation('androidx.test:runner:1.5.2')
-    androidTestImplementation('androidx.test:rules:1.5.0')
-    androidTestImplementation ('org.hamcrest:hamcrest-library:2.2')
+    androidTestImplementation(libs.espresso.core)
+    androidTestImplementation (libs.androidx.espresso.contrib)
+    androidTestImplementation(libs.androidx.runner)
+    androidTestImplementation(libs.androidx.rules)
+    androidTestImplementation (libs.hamcrest.library)
 
-
-
+  //  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+   // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     /* def fragment_version = "1.5.6"
      debugImplementation "androidx.fragment:fragment-testing:$fragment_version"*/
 
     //tmp
     // debugImplementation "androidx.test:monitor:1.6.1"
 //Shit for mockk to run on api<p
-  //  implementation 'com.github.tmurakami:dexopener:2.0.5'
+    implementation 'com.github.tmurakami:dexopener:2.0.5'
 
+  //  implementation 'androidx.core:core-ktx:1.3.2'
+  //  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
