--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -154,7 +154,7 @@ dependencies {
     androidTestImplementation (libs.androidx.espresso.contrib)
     androidTestImplementation(libs.androidx.runner)
     androidTestImplementation(libs.androidx.rules)
-    androidTestImplementation (libs.hamcrest.library)
+  //  androidTestImplementation (libs.hamcrest.library)
 
   //  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
