--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -156,7 +156,7 @@ dependencies {
     androidTestImplementation(libs.androidx.rules)
   //  androidTestImplementation (libs.hamcrest.library)
 
-  //  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+   // testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     /* def fragment_version = "1.5.6"
      debugImplementation "androidx.fragment:fragment-testing:$fragment_version"*/
