--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 org.gradle.unsafe.configuration-cache=false
 android.defaults.buildfeatures.buildconfig=true
-android.nonFinalResIds=false
+android.nonFinalResIds=true
+#systemProp.DDMLIB_JDWP_PROXY_ENABLED=false
 
 
