--- a/shared-test/build.gradle
+++ b/shared-test/build.gradle
@@ -28,6 +28,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    //tmp
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -38,5 +43,10 @@ dependencies {
     implementation project(path: ':trackdialogFeature')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+   // androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+
+
+
 }
