MenuRepositoryImpl getItem impl added all tests passed other methods refactor all tests passed 24.08.2023

--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -136,8 +136,12 @@ dependencies {
     androidTestImplementation("androidx.fragment:fragment-testing:1.6.0-alpha04")*/
    /* debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0")
     androidTestImplementation("androidx.fragment:fragment-testing:1.6.0")*/
-    debugImplementation "androidx.fragment:fragment-testing:1.5.7"
-    implementation "androidx.fragment:fragment-ktx:1.5.7"
+    /////////////////////////////////////////////////////////////////
+    debugImplementation "androidx.fragment:fragment-testing:1.6.1"
+    implementation "androidx.fragment:fragment-ktx:1.6.1"
+   // debugImplementation "androidx.fragment:fragment-testing:1.5.7"
+    //implementation "androidx.fragment:fragment-ktx:1.5.7"
+    //////////////////////////////////////
     ///////////////////////////////////
     //testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
     ///////////////////////////
