--- a/core/build.gradle
+++ b/core/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 
     //Shit for mockk to run on api<p
     //implementation 'com.github.tmurakami:dexopener:2.0.5'
+    implementation libs.espresso.idling.resource
 }
