--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
 
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <application
+        android:name=".YESApplication"
         android:allowBackup="true"
 
         android:icon="@mipmap/ic_launcher"
