--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':playerFeature')
     implementation project(path: ':trackdialogFeature')
+    implementation project(path: ':musicPlayerFeature')
     //tmp
     implementation project(path: ':shared-test')
     //core
@@ -68,7 +69,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.8.0'
 
-
+    implementation libs.media
     // implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
