--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ plugins {
     alias(libs.plugins.kotlinAndroid) apply false
     alias(libs.plugins.devtoolsKsp) apply false
     alias(libs.plugins.kotlinKapt) apply false
-   // id "org.jetbrains.kotlin.kapt" version "1.9.0" apply false
+    alias(libs.plugins.androidLibrary) apply false
+    // id "org.jetbrains.kotlin.kapt" version "1.9.0" apply false
     //id("com.google.devtools.ksp") version "1.8.21-1.0.11" apply false
 }
 allprojects {
