--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,9 @@
 [versions]
 androidGradlePlugin = "8.1.1"#"7.4.0"
+androidx-media = "1.6.0"
+androidx-media3 = "1.6.0"
 dagger = "2.47"
+exoplayerCore = "2.19.1"
 junit-jupiter = "5.9.3"
 kotlin = "1.6.21"
 ksp = "1.8.0-1.0.8"#do not change
@@ -22,7 +25,13 @@ rules = "1.5.0"#"1.4.0"
 runner = "1.5.2"#"1.4.0"
 turbine = "1.0.0"
 
+
 [libraries]
+
+exoplayer-core = { module = "com.google.android.exoplayer:exoplayer-core", version.ref = "exoplayerCore" }
+exoplayer-ui = { module = "com.google.android.exoplayer:exoplayer-ui", version.ref = "exoplayerCore" }
+extension-cast = { module = "com.google.android.exoplayer:extension-cast", version.ref = "exoplayerCore" }
+extension-mediasession = { module = "com.google.android.exoplayer:extension-mediasession", version.ref = "exoplayerCore" }
 hamcrest={module='org.hamcrest:hamcrest',version.ref = "hamcrest"}
 androidx-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "espresso" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso" }
@@ -47,6 +56,8 @@ mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkVersion
 navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-fragment-ktx" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ui-ktx" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+media = { module = "androidx.media:media", version.ref = "androidx-media" }
+media3 = { module = "androidx.media3:media3", version.ref = "androidx-media3" }
 
 [plugins]
 androidLibrary = { id = 'com.android.library', version.ref = "androidGradlePlugin" }
@@ -55,4 +66,5 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 devtoolsKsp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlinKapt={id="org.jetbrains.kotlin.kapt",version.ref="kapt"}
 [bundles]
+
 
