--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        viewBinding = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
@@ -32,6 +35,10 @@ android {
 
 dependencies {
     implementation project(path: ':coreUI')
+    implementation project(path: ':core')
+    implementation project(path: ':musicPlayerFeature')
+
+    implementation libs.media3//tmp
 
     implementation 'androidx.core:core-ktx:1.9.0'
     //for fragments
