mediasession media browser mediacontroller in progress 29.09.2023

--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':musicPlayerFeature')
 
-    implementation libs.media3//tmp
+    implementation libs.media//tmp
 
     implementation 'androidx.core:core-ktx:1.9.0'
     //for fragments
