learned how mediacontroller worked 3.10.2023

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.8.0'
 
-    implementation libs.media
+//    implementation libs.media
     // implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
