--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -38,7 +38,11 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':musicPlayerFeature')
 
-    implementation libs.media//tmp
+  //  implementation libs.media3//tmp
+    implementation "androidx.media3:media3-session:1.1.1"
+    implementation "androidx.media3:media3-exoplayer:1.1.1"
+    implementation "androidx.media3:media3-exoplayer-dash:1.1.1"
+    implementation "androidx.media3:media3-ui:1.1.1"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     //for fragments
