--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 androidGradlePlugin = "8.1.1"#"7.4.0"
 dagger = "2.47"
+fragmentKtx = "1.6.1"
 junit-jupiter = "5.9.3"
 kotlin = "1.6.21"
 ksp = "1.8.0-1.0.8"#do not change
@@ -12,6 +13,7 @@ hamcrest="2.2"
 espresso = "3.3.0"#do not change
 appcompat = "1.6.1"
 kotlinxCoroutinesTest = "1.3.2"
+lifecycleRuntimeKtx = "2.6.2"
 material = "1.9.0"
 constraintlayout = "2.1.4"
 mockkVersion = "1.12.2"
@@ -23,6 +25,9 @@ runner = "1.5.2"#"1.4.0"
 turbine = "1.0.0"
 
 [libraries]
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
+androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
 hamcrest={module='org.hamcrest:hamcrest',version.ref = "hamcrest"}
 androidx-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "espresso" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso" }
