--- a/core/build.gradle
+++ b/core/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     //room
     implementation libs.androidx.room.runtime
     kapt libs.androidx.room.compiler
+    implementation libs.androidx.room.ktx
     //Dagger/////////////////////
     implementation libs.dagger
     androidTestImplementation libs.dagger
