--- a/playListDialogFeature/build.gradle
+++ b/playListDialogFeature/build.gradle
@@ -64,4 +64,9 @@ dependencies {
     //fragment
     debugImplementation libs.androidx.fragment.testing
     implementation libs.androidx.fragment.ktx
+
+    //Preferences DataStore
+    implementation libs.androidx.datastore.preferences
+    androidTestImplementation libs.androidx.datastore.preferences.core
+    androidTestImplementation 'androidx.preference:preference-ktx:1.1.1'
 }
