--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':playerFeature')
     implementation project(path: ':trackdialogFeature')
+    implementation project(path: ':playListDialogFeature')
     //tmp
     implementation project(path: ':shared-test')
     //core
@@ -103,4 +104,9 @@ dependencies {
 //room
     implementation libs.androidx.room.runtime
     kapt libs.androidx.room.compiler
+
+    //Preferences DataStore
+    implementation libs.androidx.datastore.preferences
+    implementation libs.androidx.datastore.preferences.core
+    implementation libs.androidx.preference.ktx
 }
