--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -33,12 +33,16 @@ android {
 dependencies {
     implementation project(path: ':coreUI')
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    //for fragments
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation libs.core.ktx
+    implementation libs.appcompat
+    implementation libs.material
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    //fragment
+    debugImplementation libs.androidx.fragment.testing
+    implementation libs.androidx.fragment.ktx
+
+    //viewModel
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.androidx.lifecycle.viewmodel.ktx
+    implementation libs.androidx.fragment.ktx
 }
