--- a/core/build.gradle
+++ b/core/build.gradle
@@ -61,4 +61,10 @@ dependencies {
     implementation libs.dagger
     androidTestImplementation libs.dagger
     kapt libs.dagger.compiler
+
+    //Preferences DataStore
+    implementation libs.androidx.datastore.preferences
+    androidTestImplementation libs.androidx.datastore.preferences.core
+    androidTestImplementation libs.androidx.preference.ktx
+
 }
