--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -35,6 +35,9 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    buildFeatures {
+        viewBinding = true
+    }
     namespace 'com.yes.playlistfeature'
 }
 
@@ -43,22 +46,15 @@ dependencies {
 
     implementation project(path: ':core')
     implementation project(path: ':coreUI')
-    implementation project(path: ':trackdialogFeature')
 
 
-   // implementation 'androidx.core:core-ktx:1.9.0'
-    //implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    //Espresso
-    androidTestImplementation(libs.espresso.core)
-//    androidTestImplementation (libs.androidx.espresso.contrib)
-    //Dagger/////////////////////
-    def dagger_version = '2.45'
-    implementation "com.google.dagger:dagger:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-    ////////////////
-   /* implementation libs.dagger
-    ksp libs.dagger.compiler*/
-    /////////////////////////
-    // kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
+//fragment
+    debugImplementation libs.androidx.fragment.testing
+    implementation libs.androidx.fragment.ktx
+
+    //viewModel
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.androidx.lifecycle.viewmodel.ktx
+    implementation libs.androidx.fragment.ktx
+
 }
