--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 
     implementation project(path: ':core')
     implementation project(path: ':coreUI')
+
+    implementation libs.core.ktx
+    implementation libs.appcompat
+    implementation libs.material
     //Dagger/////////////////////
     implementation libs.dagger
     androidTestImplementation libs.dagger
