exo player functionality in progress 18.10.2023

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,9 @@ dependencies {
     implementation libs.androidx.datastore.preferences
     implementation libs.androidx.datastore.preferences.core
     implementation libs.androidx.preference.ktx
+    //  implementation libs.media3//tmp
+    implementation libs.androidx.media3.session
+    implementation libs.androidx.media3.exoplayer
+    implementation libs.androidx.media3.exoplayer.dash
+    implementation libs.androidx.media3.ui
 }
