--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -62,4 +62,10 @@ dependencies {
     implementation libs.androidx.lifecycle.viewmodel.ktx
     implementation libs.androidx.fragment.ktx
 
+    //  implementation libs.media3//tmp
+    implementation libs.androidx.media3.session
+    implementation libs.androidx.media3.exoplayer
+    implementation libs.androidx.media3.exoplayer.dash
+    implementation libs.androidx.media3.ui
+
 }
