--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicPlayer"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:theme="@style/Theme.YESActivity"
