--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -195,4 +195,8 @@ dependencies {
 
   //  implementation 'androidx.core:core-ktx:1.3.2'
   //  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //Preferences DataStore
+    implementation libs.androidx.datastore.preferences
+    androidTestImplementation libs.androidx.datastore.preferences.core
+    androidTestImplementation libs.androidx.preference.ktx
 }
