--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,10 +4,10 @@ dagger = "2.47"
 datastorePreferences = "1.0.0"
 fragmentKtx = "1.6.1"
 junit-jupiter = "5.9.3"
-kotlin = "1.6.21"
+kotlin = "1.9.10"
 ksp = "1.8.0-1.0.8"#do not change
 kapt="1.9.0"
-core-ktx = "1.9.0"#do not change
+core-ktx = "1.12.0"#do not change"1.9.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 hamcrest="2.2"
