--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -22,8 +22,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     buildFeatures {
         viewBinding = true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
@@ -80,4 +85,12 @@ dependencies {
     implementation libs.espresso.idling.resource
     androidTestImplementation libs.androidx.runner
     androidTestImplementation libs.androidx.rules
+    //Compose
+    // Android Studio Preview support
+    implementation("androidx.compose.ui:ui-tooling-preview")
+    def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
+    implementation(composeBom)
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.foundation:foundation'
+    implementation "androidx.compose.material:material"
 }
