--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -87,10 +87,16 @@ dependencies {
     androidTestImplementation libs.androidx.rules
     //Compose
     // Android Studio Preview support
-    implementation("androidx.compose.ui:ui-tooling-preview")
+
     def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
     implementation(composeBom)
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.foundation:foundation'
-    implementation "androidx.compose.material:material"
+
+
+
+    implementation "androidx.compose.ui:ui-tooling-preview:1.5.4"
+    implementation 'androidx.compose.ui:ui:1.5.4'
+    implementation 'androidx.compose.runtime:runtime:1.5.4'
+    implementation 'androidx.compose.foundation:foundation:1.5.4'
+    implementation 'androidx.compose.material:material:1.5.4'
+    implementation 'androidx.compose.ui:ui-tooling:1.5.4'
 }
