--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -91,12 +91,10 @@ dependencies {
     def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
     implementation(composeBom)
 
-
-
-    implementation "androidx.compose.ui:ui-tooling-preview:1.5.4"
-    implementation 'androidx.compose.ui:ui:1.5.4'
-    implementation 'androidx.compose.runtime:runtime:1.5.4'
-    implementation 'androidx.compose.foundation:foundation:1.5.4'
-    implementation 'androidx.compose.material:material:1.5.4'
-    implementation 'androidx.compose.ui:ui-tooling:1.5.4'
+    implementation libs.androidx.ui.tooling.preview
+    implementation libs.androidx.ui
+    implementation libs.androidx.runtime
+    implementation libs.androidx.foundation
+    implementation libs.androidx.material
+    implementation libs.androidx.ui.tooling
 }
