--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -31,10 +31,12 @@ android {
     }
     buildFeatures {
         viewBinding = true
+        compose true
     }
-    buildFeatures {
-        viewBinding = true
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.3'
     }
+
     namespace 'com.yes.playlistfeature'
 }
 
@@ -77,5 +79,14 @@ dependencies {
     implementation libs.androidx.datastore.preferences
     androidTestImplementation libs.androidx.datastore.preferences.core
     androidTestImplementation libs.androidx.preference.ktx
-
+    //Compose
+    def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
+    implementation(composeBom)
+    implementation libs.androidx.ui.tooling.preview
+    implementation libs.androidx.ui
+    implementation libs.androidx.runtime
+    implementation libs.androidx.foundation
+    implementation libs.androidx.material
+    implementation libs.androidx.ui.tooling
+    implementation libs.androidx.lifecycle.viewmodel.compose
 }
